2004-12-01  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: add debug message about EOF on data socket.
	* NetAccess.cc: initialize reconnect_interval_current properly.

2004-11-26  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: suspend/resume pty buffers too.

2004-11-19  Alexander V. Lukyanov <lav@yars.free.net>

	* NetAccess.cc: set TIOCOUTQ_tested so that it is not tested each time.
	* resource.cc: make ftps:initial-prot empty so that PROT would be always
	  used for ftps connections.

2004-11-18  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc: fix downloading of growing files.
	* SFtp.cc: fix excluding in SFtpListInfo (fixes e.g. mirror).

2004-11-16  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, NetAccess.cc: don't call Do directly, use Roll.
	* SMTask.cc, SMTask.h: use separate task stack, drop prev_current member.
	* ftpclass.cc: fix Query for ftps:initial-prot; don't Close in ~Ftp.

2004-11-15  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h, Http.cc, misc.cc, misc.h: send authorization
	  to http proxy in CONNECT requests.

2004-11-13  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: fixed mkdir.
	* FileSet.cc: fixed file mode comparision.
	* resource.cc, ftpclass.cc: new setting ftps:initial-prot.

2004-11-03  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc: change command to RETRP to differentiate from plain RETR
	  in transfer continuation; modify shell command to speed up partial
	  transfers.
	* complete.cc, lftp_rl.c, lftp_rl.h: improve completion of aliases.

2004-11-03  Loic Le Loarer <lll+lftp@m4x.org>

	* Fish.cc: add support for continue mode in fish protocol.

2004-11-01  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fix condition for unbound data socket (this fixes FXP).

2004-10-28  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: add --no-symlinks option.
	* Http.cc: fixed Cache-Control combination - use comma instead of space.
